Initial Setup - Upgrade to .net 8

--- a/WarhammerGameManager.Frontend/Views/Shared/_Layout.cshtml
+++ b/WarhammerGameManager.Frontend/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    <p class="nav navbar-text">Hello, @User.Identity?.Name!</p>
                 </div>
             </div>
         </nav>
