updates to apply loading screen

--- a/WarhammerGameManager.Frontend/Views/Admin/Index.cshtml
+++ b/WarhammerGameManager.Frontend/Views/Admin/Index.cshtml
@@ -7,12 +7,12 @@
 
 <div class="row justify-content-center">
     <div class="col-md-3 text-center">
-        <a class="btn btn-outline-primary" asp-controller="Admin" asp-action="PlayerEditor">Players</a>
+        <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="PlayerEditor">Players</a>
     </div>
     <div class="col-md-3 text-center">
-        <a class="btn btn-outline-primary" asp-controller="Admin" asp-action="">Factions</a>
+        <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="">Factions</a>
     </div>
     <div class="col-md-3 text-center">
-        <a class="btn btn-outline-primary" asp-controller="Admin" asp-action="">Test</a>
+        <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="">Test</a>
     </div>
 </div>
