adding in some charting logic and mapping

--- a/WarhammerGameManager.Frontend/Views/Home/Index.cshtml
+++ b/WarhammerGameManager.Frontend/Views/Home/Index.cshtml
@@ -10,4 +10,5 @@
 @section Scripts
 {
     <script src="~/lib/Chart.js/chart.umd.js" asp-append-version="true"></script>
+    <script src="~/js/HomeStatsScripts.js" asp-append-version="true"></script>
 }
