Starting implementation of quickroll functionality.

--- a/WarhammerGameManager.Frontend/Views/Home/Index.cshtml
+++ b/WarhammerGameManager.Frontend/Views/Home/Index.cshtml
@@ -1,11 +1,72 @@
-﻿<div class="row justify-content-center">
+﻿<form id="RollDiceRequestForm" asp-controller="GameTracker" asp-action="RollDice" method="post">
+</form>
+
+<div class="row justify-content-center">
     <div class="col-md-6 text-center">
         <h1>Stats</h1>
         <hr />
     </div>
 </div>
 
-<p>Here will be the future statistics showing win percentage by faction and player!</p>
+<div class="row justify-content-center">
+    <div class="col-md-6 text-center">
+        <div class="d-grid gap-2">
+            <button class="btn btn-lg btn-block btn-outline-primary" data-bs-toggle="modal" data-bs-target="#RollDiceModal">
+                Quick Roll
+            </button>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="RollDiceModal" tabindex="-1" aria-labelledby="RollDiceModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="RollDiceModalLabel">Quick Roll Dice</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div id="RollDiceRequestDiv">
+                    <div class="mb-3">
+                        <label for="AttackCountInput" class="form-label">Attacks Count</label>
+                        <input form="RollDiceRequestForm" name="request.DiceCount" type="number" step="1" class="form-control" id="AttackCountInput" aria-describedby="AttackCountHelp">
+                        <div id="AttackCountHelp" class="form-text">The number of dice to roll initially, usually the A (attacks) characteristic.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="HitThresholdInput" class="form-label">Hit Threshold</label>
+                        <input form="RollDiceRequestForm" name="request.HitThreshold" type="number" step="1" class="form-control" id="HitThresholdInput" aria-describedby="HitThresholdHelp">+
+                        <div id="HitThresholdHelp" class="form-text">The minimum value required on a die to be considered a successful Hit.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="WoundThresholdInput" class="form-label">Wound Threshold</label>
+                        <input form="RollDiceRequestForm" name="request.SaveThreshold" type="number" step="1" class="form-control" id="WoundThresholdInput" aria-describedby="WoundThresholdHelp">+
+                        <div id="WoundThresholdHelp" class="form-text">The minimum value required on a die to be considered a successful Wound.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="SaveThresholdInput" class="form-label">Save Threshold</label>
+                        <input form="RollDiceRequestForm" name="request.WoundThreshold" type="number" step="1" class="form-control" id="SaveThresholdInput" aria-describedby="SaveThresholdHelp">+
+                        <div id="SaveThresholdHelp" class="form-text">The minimum value required on a die to be considered a successful Save.</div>
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input form="RollDiceRequestForm" name="request.FeelNoPainFlag" type="checkbox" value="true" class="form-check-input" id="FeelNoPainCheckInput">
+                        <label class="form-check-label" for="FeelNoPainCheckInput">Enable Feel No Pain Save?</label>
+                    </div>
+                    <div class="mb-3">
+                        <label for="FNPThresholdInput" class="form-label">Feel No Pain Threshold</label>
+                        <input form="RollDiceRequestForm" name="request.FeelNoPainThreshold" type="number" step="1" class="form-control" id="FNPThresholdInput" aria-describedby="FNPThresholdHelp">+
+                        <div id="FNPThresholdHelp" class="form-text">The minimum value required on a die to be considered a successful Feel No Pain Save.</div>
+                    </div>
+                    <button form="RollDiceRequestForm" type="submit" class="btn btn-primary">Roll!</button>
+                </div>
+                <div id="RollDiceResultsDiv" style="display: none">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts
 {
