--- a/WarhammerGameManager.Frontend/Views/Admin/Index.cshtml
+++ b/WarhammerGameManager.Frontend/Views/Admin/Index.cshtml
@@ -7,12 +7,18 @@
 
 <div class="row justify-content-center">
     <div class="col-md-3 text-center">
-        <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="PlayerEditor">Players</a>
+        <div class="d-grid gap-2">
+            <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="PlayerEditor">Players</a>
+        </div>
     </div>
     <div class="col-md-3 text-center">
-        <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="">Factions</a>
+        <div class="d-grid gap-2">
+            <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="">Factions</a>
+        </div>
     </div>
     <div class="col-md-3 text-center">
-        <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="">Test</a>
+        <div class="d-grid gap-2">
+            <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="">Test</a>
+        </div>
     </div>
 </div>
