--- a/WarhammerGameManager.Frontend/Views/_ViewImports.cshtml
+++ b/WarhammerGameManager.Frontend/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WarhammerGameManager.Frontend
 @using WarhammerGameManager.Frontend.Models
 @using WarhammerGameManager.Entities.ViewModels
+@using WarhammerGameManager.Entities.ApplicationModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
