add new player functionality

--- a/WarhammerGameManager.Frontend/Views/Admin/Index.cshtml
+++ b/WarhammerGameManager.Frontend/Views/Admin/Index.cshtml
@@ -12,7 +12,7 @@
         </div>
     </div>
     <br />
-    <div class="col-md-3 text-center">
+    @* <div class="col-md-3 text-center">
         <div class="d-grid gap-2">
             <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="">Factions</a>
         </div>
@@ -22,5 +22,5 @@
         <div class="d-grid gap-2">
             <a class="btn btn-outline-primary loadButton" asp-controller="Admin" asp-action="">Test</a>
         </div>
-    </div>
+    </div> *@
 </div>
