--- a/WarhammerGameManager.Frontend/Views/Admin/PlayerEditor.cshtml
+++ b/WarhammerGameManager.Frontend/Views/Admin/PlayerEditor.cshtml
@@ -7,6 +7,90 @@
 </div>
 
 <div class="row justify-content-center">
+    <div class="col-md-6 text-center">
+        <div class="d-grid gap-2">
+            <button class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#newPlayerEditModal">Add New Player</button>
+            <form asp-controller="Admin" asp-action="PlayerInfoEditor" method="post">
+                <div class="modal fade" id="newPlayerEditModal" tabindex="-1" aria-labelledby="newPlayerEditModal_Label" aria-hidden="true">
+                    <div class="modal-dialog modal-xl">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="newPlayerEditModal_Label">Add New Player</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <hr />
+                                <h3>Personal Information</h3>
+                                <hr />
+                                <div class="mb-3">
+                                    <label for="ExistingPlayerEditor_FirstName" class="form-label">First Name</label>
+                                    <input name="request.FirstName" type="text" class="form-control" id="ExistingPlayerEditor_FirstName">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="ExistingPlayerEditor_LastName" class="form-label">Last Name</label>
+                                    <input name="request.LastName" type="text" class="form-control" id="ExistingPlayerEditor_LastName">
+                                </div>
+                                <hr />
+                                <h3>Factions</h3>
+                                <hr />
+                                <div class="table-responsive text-center" style="max-height: 30vh">
+                                    <table class="table table-striped EditorFactionViewerTable">
+                                        <thead>
+                                            <tr>
+                                                <th>
+
+                                                </th>
+                                                <th class="text-center">
+                                                    Parent Faction
+                                                </th>
+                                                <th class="text-center">
+                                                    Faction
+                                                </th>
+                                                <th class="text-center">
+                                                    Sub Faction
+                                                </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @for (var j = 0; j < Model.Sub_Factions.Count; j++)
+                                            {
+                                                var subFaction = Model.Sub_Factions[j];
+                                                <tr>
+                                                    <td>
+                                                        <input name="request.Sub_Factions[@j].Id" value="@subFaction.Id" type="hidden" />
+
+                                                        <div class="form-check form-switch">
+                                                            <input name="request.Sub_Factions[@j].Selected" value="true" class="form-check-input" type="checkbox">
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        @subFaction.Faction.Parent.Name
+                                                    </td>
+                                                    <td>
+                                                        @subFaction.Faction.Name
+                                                    </td>
+                                                    <td>
+                                                        @subFaction.Name
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-outline-success loadButton">Submit</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="row justify-content-center">
     <div class="col-md-12 text-center">
         <hr />
         <div class="table-responsive table-striped">
@@ -112,7 +196,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="submit" class="btn btn-outline-success">Submit</button>
+                                                    <button type="submit" class="btn btn-outline-success loadButton">Submit</button>
                                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                                 </div>
                                             </div>
