--- a/WarhammerGameManager.Frontend/Views/GameTracker/Index.cshtml
+++ b/WarhammerGameManager.Frontend/Views/GameTracker/Index.cshtml
@@ -13,11 +13,11 @@
         var game = Model.Games[i];
         <div class="accordion-item">
             <h2 class="accordion-header" id="cardHeading_@i">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#game_@i" aria-expanded="false" aria-controls="game_@i">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#game_@i" aria-expanded="false" aria-controls="game_@i">
                     Game #@game.Id - @game.GameDate.ToString("MM/dd/yyyy")
                 </button>
             </h2>
-            <div id="game_@i" class="accordion-collapse collapse show" aria-labelledby="cardHeading_@i" data-bs-parent="#gamesAccordian">
+            <div id="game_@i" class="accordion-collapse collapse" aria-labelledby="cardHeading_@i" data-bs-parent="#gamesAccordian">
                 <div class="accordion-body">
                     <div class="row justify-content-center">
                         <div class="col-md-12 text-center">
@@ -25,6 +25,7 @@
                             {
                                 <h3>@gameData.PlayerData.FirstName @gameData.PlayerData.LastName</h3>
                                 <h4>Points: @gameData.Points</h4>
+                                <h5>@gameData.PlayerFaction.Name</h5>
                                 <hr />
                             }
                         </div>
