--- a/WarhammerGameManager.Frontend/Views/Home/Index.cshtml
+++ b/WarhammerGameManager.Frontend/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="RollDiceModal" tabindex="-1" aria-labelledby="RollDiceModal" aria-hidden="true">
+<div class="modal fade" id="RollDiceModal" tabindex="-1" aria-labelledby="RollDiceModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
